Add small files, cleanup code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ set (EXE_NAME SentimentAnalyzer)
 #   set (input02 "train_target.csv")
 # etc....
 
-set (input01 "dev-train-data.csv")
-set (input02 "dev-train-target.csv")
+set (input01 "dev-train-data-sm.csv")
+set (input02 "dev-train-target-sm.csv")
 set (input03 "dev-test-data.csv")
 set (input04 "dev-test-target.csv")
 
