--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,6 +53,11 @@ jobs:
       - name: List contents of build directory
         run: ls -al ${{runner.workspace}}/build
 
+      - name: Run tests
+        working-directory: ${{runner.workspace}}/build
+        shell: bash
+        run: ./$EXE_NAME
+
       - name: Run the project
         working-directory: ${{runner.workspace}}/build
         shell: bash
